--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>Arduino-Python 4-Axis Servo Control</h1>
+        <h1>Arduino-Python Servo Control</h1>
         <h2>Control four (or more) RC servos with Arduino and Python.</h2>
 
         <section id="downloads">
